--- a/.github/workflows/sonar-spring-cloud-azure.yml
+++ b/.github/workflows/sonar-spring-cloud-azure.yml
@@ -48,8 +48,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           JAVA_OPTS: "-Xmx3062m -XX:MaxMetaspaceSize=512m -XX:ReservedCodeCacheSize=128m"
-          SONAR_SCANNER_OPTS: "-Xmx3062m -XX:MaxPermSize=512m -XX:ReservedCodeCacheSize=128m"
-          MAVEN_OPTS: "-Xmx3062m -XX:MaxPermSize=512m -XX:ReservedCodeCacheSize=128m"
+          SONAR_SCANNER_OPTS: "-Xmx3062m -XX:MaxMetaspaceSize=512m -XX:ReservedCodeCacheSize=128m"
+          MAVEN_OPTS: "-Xmx3062m -XX:MaxMetaspaceSize=512m -XX:ReservedCodeCacheSize=128m"
         run: |
           mvn -B -e -f sdk/spring/pom.xml -P coverage verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
           -Dsonar.organization=stliu \
